[gd_scene load_steps=5 format=2]

[ext_resource path="res://sprites/waluigi.png" type="Texture" id=1]
[ext_resource path="res://scenes/ui/Toasty.gd" type="Script" id=2]
[ext_resource path="res://audio/sfx/toasty.wav" type="AudioStream" id=3]

[sub_resource type="Animation" id=1]
resource_name = "toasty"
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Waluigi:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05, 0.95, 1 ),
"transitions": PoolRealArray( 0.6, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1024, 600 ), Vector2( 896, 600 ), Vector2( 896, 600 ), Vector2( 1024, 600 ) ]
}
tracks/1/type = "audio"
tracks/1/path = NodePath("AudioStreamPlayer")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"clips": [ {
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource( 3 )
} ],
"times": PoolRealArray( 0 )
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:can_activate_secret")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[node name="Toasty" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}
target_coin_streak = 2
can_activate_secret = true

[node name="Waluigi" type="TextureRect" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 64.0002
margin_bottom = 64.0
rect_scale = Vector2( 2, 2 )
rect_pivot_offset = Vector2( 0, 128 )
texture = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/toasty = SubResource( 1 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
bus = "sfx"

[node name="CoinTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="Cooldown" type="Timer" parent="."]
wait_time = 300.0
one_shot = true

[connection signal="timeout" from="CoinTimer" to="." method="_on_CoinTimer_timeout"]
[connection signal="timeout" from="Cooldown" to="." method="_on_Cooldown_timeout"]
